--- a/breeds.css
+++ b/breeds.css
@@ -1,34 +1,35 @@
 body{
-    background-color: slategray;
+    background-color: #222629;
 }
-nav{
-    width: 100%;
-   
-}
-nav a{
-    width: 100%;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    border: 1px;
-    font-size: 20px;
-    background-color: white;
-}
-nav a:hover{
+.header{
+    overflow: hidden;
+    padding: 20px 20px;
     background-color: whitesmoke;
-    text-transform: uppercase;
-}
-ul{
-    list-style-type: none;
-    margin: 0 0 0 0;
-    padding: 0px;
-}
-li{
-    display: inline;
+  }
+  .header a{
+    float: left;
+    color: #222629;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+  .header a.logo{
+    font-size: x-large;
+    font-family: Georgia;
+    font-weight: bold;
+  }
+  .header a:hover{
+    background-color: lightgray;
+  }
+  .header a.active{
+    background-color: lightseagreen;
+    color:white;
+  }
+  .headerright{
     float: right;
-    border: 3px solid rgb(96, 133, 91);
-    margin: 05px;
-}
+  }
+
 .learn_more{
     border: 10px;
     background-color: #5CAC8A;
